--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,5 @@
 .footer {
   background: inherit;
-  width: 1280px;
   padding: 60px;
   margin: auto;
 }
