--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,6 +4,7 @@
   font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   line-height: 16px;
+  width: 100%;
 }
 
 .page__section {
